@@ -87,7 +87,7 @@
  *      TRISC<6> = TRISC<7> = 1 (TX, RX)
  *      SPBRGH:SPBRG
  *
- * 18f2450/18f2480/18f2585/18f2682:
+ * 18f2450/18f2480/18f2585/18f2682/18f6585/18f6680/18f8585/18f8680:
  *      RC6/TX and RC7/RX
  *
  *      TRISC<6> = 0    (TX)
